--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,11 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
-    "typescript": "4.9.3"
+    "react-select": "^5.7.0",
+    "typescript": "4.9.3",
+    "uuid": "^9.0.0"
+  },
+  "devDependencies": {
+    "@types/uuid": "^9.0.0"
   }
 }
